# shortify

./: Cargo.toml
migrations/: 0001_UrlMapping_table.sql
src/: db.rs  main.rs
src/handlers/: get.rs  post.rs
