[package]
name = "Shortify"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
nanoid = "0.4.0"
futures = "0.3"
